--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,13 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+asyncpg = "^0.29.0"
+sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
 
 
 [tool.poetry.group.tests.dependencies]
 pytest = {extras = ["asyncio"], version = "^8.1.1"}
+pytest-asyncio = "^0.23.6"
 
 [build-system]
 requires = ["poetry-core"]
