--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   postgres:
-    profiles: [tests]
+    profiles: [dev, tests]
     image: postgres:latest
     container_name: postgres
     restart: always
@@ -44,9 +44,9 @@ services:
       - network
     volumes:
       - .:/app
-
+  
   pgadmin:
-    profiles: [admin]
+    profiles: [dev]
     container_name: pgadmin
     image: dpage/pgadmin4
     restart: always
@@ -59,6 +59,30 @@ services:
       - postgres
     networks:
       - network
+    
+  python-dev:
+    profiles: [dev]
+    build:
+      context: .
+      dockerfile: Dockerfile
+    
+    ports:
+      - "8000:8000"
+
+    command: poetry run uvicorn src.app:app --port=8000 --host=0.0.0.0
+      
+    container_name: python
+    restart: 
+      on-failure
+
+    depends_on:
+      postgres:
+        condition: service_healthy
+
+    networks:
+      - network
+    volumes:
+      - .:/app
 
 networks:
     network:
