--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ readme = "README.md"
 python = "^3.10"
 asyncpg = "^0.29.0"
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
+fastapi = "^0.110.1"
+jinja2 = "^3.1.3"
+uvicorn = "^0.29.0"
 
 
 [tool.poetry.group.tests.dependencies]
