--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,11 @@ sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
 fastapi = "^0.110.1"
 jinja2 = "^3.1.3"
 uvicorn = "^0.29.0"
+pydantic = "^2.6.4"
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
+pydantic-settings = "^2.2.1"
+python-ulid = {extras = ["pydantic"], version = "^2.4.0.post0"}
 
 
 [tool.poetry.group.tests.dependencies]
