--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,31 @@ services:
     volumes:
         - ./init.sql:/docker-entrypoint-initdb.d/init.sql
 
+
+  python-dev:
+    profiles: [dev]
+    build:
+      context: .
+      dockerfile: Dockerfile
+    
+    ports:
+      - "8000:8000"
+
+    command: poetry run uvicorn src.users.api:api --port=8000 --host=0.0.0.0
+      
+    container_name: python
+    restart: 
+      on-failure
+
+    depends_on:
+      postgres:
+        condition: service_healthy
+
+    networks:
+      - network
+    volumes:
+      - .:/app
+
   python-tests:
     profiles: [tests]
     build:
@@ -59,30 +84,6 @@ services:
       - postgres
     networks:
       - network
-    
-  python-dev:
-    profiles: [dev]
-    build:
-      context: .
-      dockerfile: Dockerfile
-    
-    ports:
-      - "8000:8000"
-
-    command: poetry run uvicorn src.app:app --port=8000 --host=0.0.0.0
-      
-    container_name: python
-    restart: 
-      on-failure
-
-    depends_on:
-      postgres:
-        condition: service_healthy
-
-    networks:
-      - network
-    volumes:
-      - .:/app
 
 networks:
     network:
