--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 pydantic-settings = "^2.2.1"
 python-ulid = {extras = ["pydantic"], version = "^2.4.0.post0"}
+python-multipart = "^0.0.9"
 
 
 [tool.poetry.group.tests.dependencies]
