--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
 fastapi = "^0.110.1"
 jinja2 = "^3.1.3"
 uvicorn = "^0.29.0"
-pydantic = "^2.6.4"
+pydantic = {extras = ["email"], version = "^2.7.1"}
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 pydantic-settings = "^2.2.1"
